--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,11 @@
             <artifactId>hibernate-core</artifactId>
             <version>6.5.2.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>3.5.2</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
